# lowlevel-computer-use-mcp

./: .gitignore  AGENTS.md  README.md  en-us_windows_11_iot_enterprise_version_25h2_x64_dvd_67098cd6.iso  pyproject.toml
.github/workflows/: pages.yml
.kitstarter/: events.jsonl
docs/: index.html  styles.css
macros/: MACRO_SKILL_TEMPLATE.md
skills/lowlevel-computer-use/: SKILL.md
skills/lowlevel-computer-use/reference/: PLATFORMS.md  TOOLS.md  WORKFLOWS.md
software/.docker.exe.cheap-lfs-recovery-26808-64ee28c6-9cae-486a-a76f-86673e838b7b/: replacement
src/lowlevel_computer_use_mcp/: __init__.py  ahk.py  installer_gui.py  server.py  winio.py
tests/: test_headless_safety_banner.py  test_mouse_motion.py
